# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["service", "service/db"]
exclude = ["etc", "dj"]

[workspace.dependencies]
thiserror = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-forest = { version= "0.1", features = [ "ansi", "smallvec", "serde", "tokio" ] }
tokio = "1.29"
