[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "db" }
hyper = {version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1"
dotenv = "0.15"
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"]}
serde_json = { workspace = true }
serde_derive = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }
