[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#r2d2 = "0.8"
#r2d2_postgres = "0.18"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "serde_json"] }
thiserror = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
tokio = { workspace = true }
serde_derive = { workspace = true }
tracing = { workspace = true }
chrono = "0.4.26"
